--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,18 @@
 <resources>
-    <string name="app_name">Group5PHFT</string>
+    <string name="app_name">FitSpotter</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">Nicolas Ventura</string>
+    <string name="nav_header_subtitle">nav1854@mav.uta.edu.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_Workout_Plans">Workout Plans</string>
+    <string name="menu_subscription">Subscription</string>
+    <string name="menu_social">Social</string>
 
     <string name="btn_login">Login</string>
     <string name="btn_register">Register</string>
@@ -21,5 +24,25 @@
     <string name="hint_security_question">Security Question</string>
     <string name="hint_dob">Date of Birth (Optional)</string>
     <string name="btn_submit">Submit</string>
+
+    <string name="sub_header">Choose your subscription plan</string>
+    <string name="sub_none">none</string>
+    <string name="sub_month">Monthly Plan - $10.00</string>
+    <string name="sub_3month">3 Month Plan - $25.00</string>
+    <string name="sub_yearly">Yearly Plan - $60.00</string>
+    <string name="sub_selected">Selected Plan:</string>
+
+    <string name="current_plan_text">Current Plan: %1$s</string>
+
+    <string name="button_proceed_to_payment">Proceed to Payment</string>
+    <string name="button_save_subscription">Save Subscription</string>
+
+    <string name="error_invalid_card_number">Card number must be 16 digits</string>
+    <string name="error_invalid_expiration_date">Expiration date must be MMYY (e.g., 1225)</string>
+    <string name="error_invalid_cvv">CVV must be 3 digits</string>
+
+    <string name="toast_subscription_saved">Subscription Saved!</string>
+    <string name="toast_failed_to_save_subscription">Failed to save subscription.</string>
+    <string name="toast_invalid_user_email">User email is not available. Please log in again.</string>
 
 </resources>
